Make compilation silent again

--- a/foo/Makefile
+++ b/foo/Makefile
@@ -1,5 +1,6 @@
 install: $(deps)
-	@echo see if we need and make foo
+	@echo see if we need and make foo $(mkr-pkgdir)
+	@echo MAKEFLAGS: $(MAKEFLAGS)
 ifneq ($(CONFIG_FOO),)
 	@echo making foo!
 	@: > $@
