--- a/foo/Makefile
+++ b/foo/Makefile
@@ -1,10 +1,3 @@
 install: $(deps)
-	@echo see if we need and make foo $(mkr-pkgdir)
-	@echo MAKEFLAGS: $(MAKEFLAGS)
-ifneq ($(CONFIG_FOO),)
-	@echo making foo!
-	@: > $@
-endif
+	@echo making foo
 
-clean:
-	$(RM) all
