--- a/foo/Makefile
+++ b/foo/Makefile
@@ -1,3 +1,7 @@
-install: $(deps)
-	@echo making foo
+config.status: $(pkg-deps)
+	@echo configuring foo
+	@: > $@
+
+install: config.status
+	@echo installing foo
 
