Handle source directories

--- a/bar/Makefile
+++ b/bar/Makefile
@@ -1,4 +1,4 @@
-config.status: $(mkr-pkgdeps)
+config.status: $(mkr-deps)
 ifneq ($(MKR_FOO_OPT),)
 	@echo configuring bar with FOO_OPT
 else
@@ -7,5 +7,6 @@ endif
 	@: > $@
 
 install: config.status
+	@echo scrdir: $(mkr-srcdir)
 	@echo installing bar
 
