--- a/foo/Makefile
+++ b/foo/Makefile
@@ -1,7 +1,8 @@
-config.status: $(mkr-pkgdeps)
+config.status: $(mkr-deps)
 	@echo configuring foo
 	@: > $@
 
 install: config.status
+	@echo srcdir: $(mkr-srcdir)
 	@echo installing foo
 
