--- a/qux/Makefile
+++ b/qux/Makefile
@@ -1,7 +1,8 @@
-config.status: $(mkr-pkgdeps)
+config.status: $(mkr-deps)
 	@echo configuring qux for bar
 	@: > $@
 
 install: config.status
+	@echo srcdir: $(mkr-srcdir)
 	@echo installing qux
 
