--- a/Kconfig
+++ b/Kconfig
@@ -1,5 +1,13 @@
 menu "Packages"
 
+config SRC_BASEDIR
+	string "Package sources baee directory"
+	default "/work/src"
+
+	help
+	  The directory under which the package sources will be looked for.
+	  If relative, it is relative to Mkrootfs directory.
+
 source "foo/Kconfig"
 source "bar/Kconfig"
 source "qux/Kconfig"
