--- a/bar/Kconfig
+++ b/bar/Kconfig
@@ -1,4 +1,12 @@
-config BAR
+menuconfig BAR
 	package "bar"
 	select FOO
+
+if BAR
+
+config BAR_SRCDIR
+	srcdir "Sources directoy"
+	default "bar-[0-9]*"
+
+endif
 
