--- a/Kconfig
+++ b/Kconfig
@@ -6,7 +6,7 @@ menu "Packages"
 
 config SRC_BASEDIR
 	string "Package sources base directory"
-	default "/work/src"
+	default "/usr/src"
 
 	help
 	  The directory under which the package sources will be looked for.
