Trigger a recompilation if ARCH, CC, CFLAGS or LDFLAGS or packages source directory change

--- a/bar/Makefile
+++ b/bar/Makefile
@@ -1,4 +1,7 @@
+install:
+
 config.status: $(mkr-deps)
+	@echo '$?' changed !
 ifneq ($(MKR_FOO_OPT),)
 	@echo configuring bar with FOO_OPT
 else
@@ -9,4 +12,3 @@ endif
 install: config.status
 	@echo scrdir: $(mkr-srcdir)
 	@echo installing bar
-
