--- a/scripts/kconfig/Makefile
+++ b/scripts/kconfig/Makefile
@@ -127,7 +127,7 @@ check-lxdialog  := $(srctree)/$(src)/lxdialog/check-lxdialog.sh
 
 # Use recursively expanded variables so we do not call gcc unless
 # we really need to do so. (Do not call gcc as part of make mrproper)
-HOST_EXTRACFLAGS = $(shell $(MKR_SHELL) $(check-lxdialog) -ccflags)
+HOST_EXTRACFLAGS = $(shell $(MKR_SHELL) $(check-lxdialog) -ccflags) -ggdb3
 HOST_LOADLIBES   = $(shell $(MKR_SHELL) $(check-lxdialog) -ldflags $(HOSTCC))
 
 HOST_EXTRACFLAGS += -DLOCALE
