Let error messages printed by commands run by the confcheck rules be displayed

--- a/scripts/Makefile.pkgbuild
+++ b/scripts/Makefile.pkgbuild
@@ -52,9 +52,9 @@ endif
 -include .mkr.makefile.deps
 
 # Define confcheck macros
-confcheck-if = $(1) > /dev/null 2>&1 && { echo $(2); success=false; };
+confcheck-if = $(1) > /dev/null && { echo $(2); success=false; };
 
-confcheck-ifnot = $(1) > /dev/null 2>&1 || { echo $(2); success=false; };
+confcheck-ifnot = $(1) > /dev/null || { echo $(2); success=false; };
 
 confcheck-tool = type $(1) > /dev/null 2>&1 || { \
 	echo Error: Command $(1) not found, install it or see $(2); \
